font sizes on all pages in main css

--- a/contact.html
+++ b/contact.html
@@ -16,57 +16,27 @@
     <div class="whole">
         <h1>Wanna get in touch with me?</h1>
 
-        <div class="infoblock">
-            <div class="frame">
-                <img src="imgs/phone.png" alt="Call me">
+        <div class="infocontainer">
+            <div class="infoblock">
+                <div class="frame">
+                    <img src="imgs/phone.png" alt="Call me">
+                </div>
+                <div class="information">
+                    <p>Call me:</p>
+                    <p> +45 22136677</p>
+                </div>
             </div>
-            <div class="information">
-                <p>Call me:</p>
-                <p> +45 22136677</p>
+
+            <div class="infoblock">
+                <div class="frame">
+                    <img src="imgs/mail.png" alt="Mail me">
+                </div>
+                <div class="information">
+                    <p>Mail me:</p>
+                    <p>megaoreomuffin@hotmail.com</p>
+                </div>
             </div>
         </div>
-
-        <div class="infoblock">
-            <div class="frame">
-                <img src="imgs/mail.png" alt="Mail me">
-            </div>
-            <div class="information">
-                <p>Mail me:</p>
-                <p>megaoreomuffin@hotmail.com</p>
-            </div>
-        </div>
-
-        <!-- <table>
-             <tr>
-                 <td>
-                     <div class="frame">
-                         <img src="imgs/phone.png" alt="Call me">
-                     </div>
-                 </td>
-                 <td>
-                     <div class="information">
-                         <p>Call me</p>
-                         <p> +45 22136677</p>
-                     </div>
-                 </td>
-             </tr>
-
-
-             <tr>
-                 <td>
-                     <div class="frame">
-                         <img src="imgs/mail.png" alt="Mail me">
-                     </div>
-                 </td>
-                 <td>
-                     <div class="information">
-                         <p>Mail me</p>
-                         <p>Megaoreomuffin@hotmail.com</p>
-                     </div>
-                 </td>
-             </tr>
-         </table>-->
-
     </div>
 </main>
 <footer>
