--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Contact</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="loadContent.js"></script>
     <link rel="stylesheet" href="contact.css">
@@ -33,7 +33,9 @@
                 </div>
                 <div class="information">
                     <p>Mail me:</p>
-                    <p>megaoreomuffin@hotmail.com</p>
+                    <p>
+                        <a href="mailto:megaoreomuffin@hotmail.com">megaoreomuffin@hotmail.com</a>
+                    </p>
                 </div>
             </div>
         </div>
