--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="loadContent.js"></script>
@@ -35,15 +35,19 @@
                 <h1>Adobe Illustration</h1>
                 <p>This illustration is made in Adobe illustrator with the pentool</p>
             </div>
+            <div class="hrtest">
+                <hr>
+            </div>
         </article>
+
 
         <article>
             <div class="img_container">
-                <img src="imgs/adobeanimate.png" alt="adobe animate">
+                <img src="imgs/AdobeAnimate.gif" alt="adobe animate">
             </div>
             <div class="text_container">
                 <h1>Adobe Animation</h1>
-                <p>This animation is made in Adobe Animation and can be seen on this link: https://proces.iwch.dk/adobe-animate/</p>
+                <p>This animation is made in Adobe Animation.</p>
             </div>
         </article>
 
