linjer portfolio, forside call to action

--- a/Index.html
+++ b/Index.html
@@ -16,9 +16,12 @@
 <main>
     <div class="centerpiece">
         <img src="imgs/mig.jpg" class="center" alt="Et  billede af Isabella" >
-        <p>Isabella Christiansen</p>
-        <p>Multimedia design</p>
+        <h1>Isabella Christiansen</h1>
+        <h1>Multimedia design</h1>
+        <br>
+        <a href="portfolio.html" id="visit"><p>Visit my portfolio to view my projects</p></a>
     </div>
+
 </main>
 
 <footer id="footer"></footer>
